--- a/themes/boot/layouts/index.html
+++ b/themes/boot/layouts/index.html
@@ -11,13 +11,14 @@
     </div>
   </div>
 </header>
+
 <section class="home__services py-8">
   <div class="container">
   <h2 class="home__services--heading display-4 text-center uppercase" data-aos="fade-up" data-aos-duration="800">{{.Params.h2}}</h2>
   <div class="lead home__services--subheading text-center pb-5" data-aos="fade-up" data-aos-duration="800">{{.Params.subhead2}}</div>
   <div class="row">
     <div class="col-lg-4 col-md-4 cols-sm-12 text-center my-3">
-      <div class="home__services--box shadow px-0 rounded" data-aos="fade-right" data-aos-duration="800">
+      <div class="home__services--box shadow px-0 rounded">
         <img class="img-fluid" src="{{.Params.service1__img}}" alt="Card image cap">
         <div class="home__services--textbox">
           <h3 class="services__heading py-1">{{.Params.service3}}</h3>
@@ -26,7 +27,7 @@
       </div>
     </div>
     <div class="col-lg-4 col-md-4 cols-sm-12 text-center my-3">
-      <div class="home__services--box shadow px-0 rounded" data-aos="fade-up" data-aos-duration="800">
+      <div class="home__services--box shadow px-0 rounded">
         <img class="img-fluid" src="{{.Params.service1__img}}" alt="Card image cap">
         <div class="home__services--textbox">
           <h3 class="services__heading py-1">{{.Params.service3}}</h3>
@@ -35,7 +36,7 @@
       </div>
     </div>
     <div class="col-lg-4 col-md-4 cols-sm-12 text-center my-3">
-      <div class="home__services--box shadow px-0 rounded" data-aos="fade-left" data-aos-duration="800">
+      <div class="home__services--box shadow px-0 rounded">
         <img class="img-fluid" src="{{.Params.service1__img}}" alt="Card image cap">
         <div class="home__services--textbox">
           <h3 class="services__heading py-1">{{.Params.service3}}</h3>
@@ -160,7 +161,7 @@
         </a>
       </div>
     </div>
-</section>
+  </section>
 <section class="home__contact container py-8">
   <div class="footer-reveal">
   <div class="row">
