--- a/themes/boot/assets/scss/_bootstrap-variables.scss
+++ b/themes/boot/assets/scss/_bootstrap-variables.scss
@@ -30,7 +30,7 @@ $link-hover-color: lighten($primary, 20%);
 $link-hover-decoration: underline;
 
 // Fonts
-$font-family-base: 'Lato', 'Helvetica Neue', Arial, sans-serif,
+$font-family-base: 'Montserrat', 'Helvetica Neue', Arial, sans-serif,
   -apple-system;
 $font-family-heading: 'Montserrat', 'Helvetica Neue', Arial, sans-serif, -apple-system;
 $font-size-base: 1rem; // Assumes the browser default, typically `16px`
@@ -41,7 +41,7 @@ $font-weight-bold: 700;
 $font-weight-base: $font-weight-normal;
 $line-height-base: 1.6;
 
-$headings-font-weight: 400;
+$headings-font-weight: 500;
 
 $spacer: 1rem;
 $spacers: ();
