--- a/themes/boot/layouts/index.html
+++ b/themes/boot/layouts/index.html
@@ -5,7 +5,7 @@
       <div class="hero-content">
         <div class="welcome-to font-weight-bold">Welcome to {{ $.Site.Params.businessname }}</div>
         <h1 class="display-3 uppercase">{{.Params.h1}}</h1>
-        <p class="py-1 lead">{{.Params.lead}}</p>
+        <p class="lead">{{.Params.lead}}</p>
         <button class="btn btn-outline-light btn-lg">See More</button>
       </div>
     </div>
