--- a/themes/boot/assets/scss/global/preloader.scss
+++ b/themes/boot/assets/scss/global/preloader.scss
@@ -1,4 +1,4 @@
-.spinner-wrapper {
+/*.spinner-wrapper {
     position: fixed;
     top: 0;
     left: 0;
@@ -6,4 +6,4 @@
     bottom: 0;
     background-color: rgba(255,255,255,0.9);
     z-index: 999999;
-}
+}*/
