--- a/themes/boot/layouts/_default/baseof.html
+++ b/themes/boot/layouts/_default/baseof.html
@@ -11,7 +11,7 @@
         {{- partial "nav.html" . -}}
         {{- partial "header.html" . -}}
         <div id="content">
-        <a href="#" id="scroll" style="display: none;"><span></span></a>
+        <a alt="Scroll to top" href="#" id="scroll" style="display: none;"><span></span></a>
         {{- block "main" . }}{{- end }}
         </div>
         {{- partial "footer.html" . -}}
